debezium/dbz#2144 StreamingPipeline IT
Signed-off-by: Kartik Angiras <angiraskartik@gmail.com>