@@ -6,73 +6,145 @@
 package io.debezium.connector.milvus;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Properties;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.atomic.AtomicBoolean;
 
+import org.apache.kafka.clients.consumer.KafkaConsumer;
+import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.serialization.ByteArrayDeserializer;
+import org.apache.kafka.connect.data.Schema;
+import org.apache.kafka.connect.data.Struct;
+import org.apache.kafka.connect.source.SourceRecord;
 import org.awaitility.Awaitility;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
-import io.debezium.connector.milvus.util.ProtoMessageFactory;
+import com.google.gson.Gson;
+import com.google.gson.JsonObject;
+
+import io.debezium.config.CommonConnectorConfig;
+import io.debezium.config.Configuration;
+import io.debezium.connector.base.ChangeEventQueue;
+import io.debezium.connector.common.CdcSourceTaskContext;
+import io.debezium.connector.common.DebeziumHeaderProducer;
+import io.debezium.connector.milvus.metadata.MilvusClientV2MetadataClient;
+import io.debezium.connector.milvus.metadata.MilvusMetadataClient;
+import io.debezium.connector.milvus.util.MilvusTestContainer;
 import io.debezium.connector.milvus.util.TestHelper;
 import io.debezium.embedded.async.AbstractAsyncEngineConnectorTest;
+import io.debezium.pipeline.DataChangeEvent;
 import io.debezium.pipeline.source.spi.ChangeEventSource;
-import io.debezium.util.Clock;
+import io.debezium.relational.TableId;
+import io.debezium.spi.topic.TopicNamingStrategy;
+import io.debezium.util.LoggingContext;
+import io.milvus.v2.client.MilvusClientV2;
+import io.milvus.v2.common.DataType;
+import io.milvus.v2.service.collection.request.CreateCollectionReq;
+import io.milvus.v2.service.collection.request.DropCollectionReq;
+import io.milvus.v2.service.vector.request.DeleteReq;
+import io.milvus.v2.service.vector.request.InsertReq;
 
-/**
- * End-to-end integration test for the D0 Milvus streaming pipeline.
- *
- * <p>
- * Runs under {@code maven-failsafe-plugin} ({@code *IT.java}). A Kafka cluster
- * is started by {@code docker-maven-plugin} during {@code pre-integration-test}
- * and the {@code kafka.bootstrap.servers} system property is passed to
- * {@code maven-failsafe-plugin}.
- * </p>
- *
- * <p>
- * Tests exercise the real {@link KafkaMilvusMessageConsumer},
- * {@link MilvusProtoDeserializer} and {@link TimetickOrderingEngine} — and, for
- * the watermark / round-trip assertion, the real
- * {@link MilvusStreamingChangeEventSource} driven against the live Kafka topic
- * via a mocked {@link ChangeEventSource.ChangeEventSourceContext}.
- * </p>
- *
- * <p>Scenarios:</p>
- * <ul>
- * <li>{@code shouldDeserializeInsertAndAdvanceWatermark}</li>
- * <li>{@code shouldDeserializeDeleteEvent}</li>
- * <li>{@code shouldHandleMultipleVchannels}</li>
- * <li>{@code shouldDetectStallAndForceFlush}</li>
- * <li>{@code shouldThrowBufferFullOnOverflow}</li>
- * <li>{@code shouldDeserializeProtoSingleWireFormat}</li>
- * <li>{@code shouldDeserializeMsgPackBatchWireFormat}</li>
- * </ul>
- */
+@Tag("integration")
 class MilvusStreamingPipelineIT extends AbstractAsyncEngineConnectorTest {
 
-    private static final String TOPIC_PREFIX_LOCAL = TestHelper.TOPIC_PREFIX;
+    private static final String PCHANNEL = "by-dev-rootcoord-dml_0";
+    private static final int DIM = 4;
+    private static final Gson GSON = new Gson();
 
-    private String bootstrap;
-    private String topic;
+    private static MilvusClientV2 milvusClient;
+    private static MilvusMetadataClient metadataClient;
+    private static String bootstrap;
+
+    private String collectionName;
     private final Set<KafkaMilvusMessageConsumer> openConsumers = new HashSet<>();
+
+    @BeforeAll
+    static void startInfrastructure() {
+        MilvusTestContainer.startAll();
+        bootstrap = MilvusTestContainer.kafkaBootstrapServers();
+
+        metadataClient = new MilvusClientV2MetadataClient(
+                new MilvusConnectorConfig(TestHelper.defaultConfig()));
+
+        Awaitility.await("Milvus MQ ready")
+                .atMost(Duration.ofMinutes(5))
+                .pollInterval(Duration.ofSeconds(5))
+                .until(() -> {
+                    try {
+                        if (milvusClient == null) {
+                            milvusClient = TestHelper.createMilvusClient();
+                        }
+                        // listCollections() succeeds before Kafka MQ is ready.
+                        // createCollection exercises the full Milvus→Kafka path,
+                        // so we use it as the true readiness probe.
+                        String sentinel = "_dbz_ready_probe_";
+                        CreateCollectionReq.FieldSchema idField = CreateCollectionReq.FieldSchema.builder()
+                                .name("id").dataType(DataType.Int64)
+                                .isPrimaryKey(true).autoID(false).build();
+                        CreateCollectionReq.FieldSchema vecField = CreateCollectionReq.FieldSchema.builder()
+                                .name("vec").dataType(DataType.FloatVector)
+                                .dimension(2).build();
+                        CreateCollectionReq.CollectionSchema schema = CreateCollectionReq.CollectionSchema.builder()
+                                .fieldSchemaList(Arrays.asList(idField, vecField)).build();
+                        milvusClient.createCollection(CreateCollectionReq.builder()
+                                .collectionName(sentinel).collectionSchema(schema).build());
+                        milvusClient.dropCollection(
+                                DropCollectionReq.builder()
+                                        .collectionName(sentinel).build());
+                        return true;
+                    }
+                    catch (Exception e) {
+                        if (milvusClient != null) {
+                            try {
+                                milvusClient.close(1);
+                            }
+                            catch (Exception ignored) {
+                            }
+                            milvusClient = null;
+                        }
+                        return false;
+                    }
+                });
+    }
+
+    @AfterAll
+    static void stopInfrastructure() {
+        try {
+            milvusClient.close(10);
+        }
+        catch (Exception ignored) {
+        }
+        try {
+            if (metadataClient != null) {
+                metadataClient.close();
+            }
+        }
+        catch (Exception ignored) {
+        }
+        MilvusTestContainer.stopAll();
+    }
 
     @BeforeEach
     void setUp() {
-        bootstrap = TestHelper.bootstrapServers();
-        topic = uniqueTopic();
-        TestHelper.ensureTopic(bootstrap, topic);
+        collectionName = "test_" + UUID.randomUUID().toString().substring(0, 8);
+        TestHelper.ensureTopic(bootstrap, PCHANNEL);
     }
 
     @AfterEach
@@ -82,20 +154,19 @@ class MilvusStreamingPipelineIT extends AbstractAsyncEngineConnectorTest {
                 c.close();
             }
             catch (Exception ignored) {
-                // best-effort
             }
         }
         openConsumers.clear();
+        try {
+            milvusClient.dropCollection(DropCollectionReq.builder()
+                    .collectionName(collectionName).build());
+        }
+        catch (Exception ignored) {
+        }
     }
 
-    // -- helpers -------------------------------------------------------------
-
-    private static String uniqueTopic() {
-        return "by-dev-rootcoord-dml_" + UUID.randomUUID().toString().substring(0, 8);
-    }
-
-    private MilvusConnectorConfig config(String wireFormat, Long stallMs, Integer bufferMaxEvents) {
-        io.debezium.config.Configuration.Builder b = TestHelper.defaultConfig(bootstrap).edit()
+    private Configuration rawConfig(String wireFormat, Long stallMs, Integer bufferMaxEvents) {
+        Configuration.Builder b = TestHelper.defaultConfig(bootstrap).edit()
                 .with("milvus.wire.format", wireFormat)
                 .with("milvus.kafka.bootstrap.servers", bootstrap);
         if (stallMs != null) {
@@ -104,7 +175,11 @@ class MilvusStreamingPipelineIT extends AbstractAsyncEngineConnectorTest {
         if (bufferMaxEvents != null) {
             b.with("milvus.buffer.max.events", bufferMaxEvents.toString());
         }
-        return TestHelper.connectorConfig(b.build());
+        return b.build();
+    }
+
+    private MilvusConnectorConfig config(String wireFormat, Long stallMs, Integer bufferMaxEvents) {
+        return new MilvusConnectorConfig(rawConfig(wireFormat, stallMs, bufferMaxEvents));
     }
 
     private MilvusProtoDeserializer deserializer(MilvusConnectorConfig cfg) {
@@ -113,289 +188,397 @@ class MilvusStreamingPipelineIT extends AbstractAsyncEngineConnectorTest {
     }
 
     /**
-     * Create a {@link KafkaMilvusMessageConsumer} assigned to the supplied
-     * pchannels and seeked to EARLIEST, tracked for orderly shutdown.
+     * Returns the current end offset of the pchannel, used to seek each test's pipeline
+     * to exactly where the topic stands before that test's data changes. This prevents
+     * cross-test event contamination (e.g. DELETE events from a prior test crashing a
+     * test that never expected to see a delete for an "unknown" collection).
      */
-    private KafkaMilvusMessageConsumer consumerAtEarliest(MilvusConnectorConfig cfg, Set<String> pchannels) {
+    private long kafkaEndOffset(String bootstrapServers, String topic) {
+        Properties props = new Properties();
+        props.put("bootstrap.servers", bootstrapServers);
+        props.put("key.deserializer", ByteArrayDeserializer.class.getName());
+        props.put("value.deserializer", ByteArrayDeserializer.class.getName());
+        try (KafkaConsumer<byte[], byte[]> consumer = new KafkaConsumer<>(props)) {
+            TopicPartition tp = new TopicPartition(topic, 0);
+            consumer.assign(List.of(tp));
+            Map<TopicPartition, Long> endOffsets = consumer.endOffsets(List.of(tp));
+            return endOffsets.getOrDefault(tp, 0L);
+        }
+    }
+
+    private KafkaMilvusMessageConsumer consumerAtOffset(MilvusConnectorConfig cfg,
+                                                        Set<String> pchannels,
+                                                        long startOffset) {
         KafkaMilvusMessageConsumer consumer = TestHelper.kafkaConsumer(cfg);
         openConsumers.add(consumer);
-        consumer.assignAndSeek(pchannels, SeekPosition.EARLIEST, null);
+        // Build a checkpoint map: {TopicPartition → startOffset - 1} so that
+        // STORED_OFFSET_PLUS_ONE seeks to exactly startOffset.
+        Map<TopicPartition, Long> checkpoints = new HashMap<>();
+        for (String pchannel : pchannels) {
+            checkpoints.put(new TopicPartition(pchannel, 0), startOffset - 1);
+        }
+        if (startOffset == 0) {
+            consumer.assignAndSeek(pchannels, SeekPosition.EARLIEST, null);
+        }
+        else {
+            consumer.assignAndSeek(pchannels, SeekPosition.STORED_OFFSET_PLUS_ONE, checkpoints);
+        }
         return consumer;
     }
 
     /**
-     * Drain all raw messages from a consumer, polling until two consecutive
-     * empty polls are observed (bounded by {@code atMost}).
+     * Runs {@link MilvusStreamingChangeEventSource#execute} in a daemon thread
+     * while concurrently polling the change-event queue for events.
+     *
+     * <p>The source uses an {@link AtomicBoolean} context so it keeps running
+     * until we explicitly stop it after the expected events have arrived (or
+     * the timeout expires).  This avoids the race where {@code execute()} exits
+     * its fixed-iteration loop before Milvus has asynchronously published the
+     * DML events to Kafka.</p>
      */
-    private List<RawMilvusMessage> drainUntilIdle(KafkaMilvusMessageConsumer consumer, Duration atMost) {
-        List<RawMilvusMessage> all = new ArrayList<>();
-        int[] idleCount = { 0 };
-        Awaitility.await("drain raw messages from Kafka")
-                .atMost(atMost)
-                .pollDelay(Duration.ofMillis(50))
-                .pollInterval(Duration.ofMillis(100))
-                .until(() -> {
-                    List<RawMilvusMessage> batch = consumer.poll(Duration.ofMillis(500));
-                    if (batch.isEmpty()) {
-                        idleCount[0]++;
-                        return !all.isEmpty() && idleCount[0] >= 2;
-                    }
-                    idleCount[0] = 0;
-                    all.addAll(batch);
-                    return false;
-                });
-        // Catch late-delivered batches between the last non-empty and idle polls.
-        List<RawMilvusMessage> tail = consumer.poll(Duration.ofMillis(200));
-        if (!tail.isEmpty()) {
-            all.addAll(tail);
+    private List<DataChangeEvent> runSourceAndPoll(Pipeline pipeline,
+                                                   int expectedCount,
+                                                   Duration timeout)
+            throws Exception {
+        AtomicBoolean running = new AtomicBoolean(true);
+        ChangeEventSource.ChangeEventSourceContext ctx = mock(ChangeEventSource.ChangeEventSourceContext.class);
+        when(ctx.isRunning()).thenAnswer(inv -> running.get());
+        when(ctx.isPaused()).thenReturn(false);
+
+        Thread sourceThread = new Thread(() -> {
+            try {
+                pipeline.source.execute(ctx, pipeline.partition, pipeline.offsetContext);
+            }
+            catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+            }
+        }, "milvus-source-thread");
+        sourceThread.setDaemon(true);
+        sourceThread.start();
+
+        try {
+            return pollEvents(pipeline.queue, expectedCount, timeout);
         }
+        finally {
+            running.set(false);
+            sourceThread.join(10_000);
+        }
+    }
+
+    private static class Pipeline {
+        final ChangeEventQueue<DataChangeEvent> queue;
+        final MilvusDatabaseSchema schema;
+        final MilvusStreamingChangeEventSource source;
+        final MilvusPartition partition;
+        final MilvusOffsetContext offsetContext;
+
+        Pipeline(ChangeEventQueue<DataChangeEvent> queue,
+                 MilvusDatabaseSchema schema,
+                 MilvusStreamingChangeEventSource source,
+                 MilvusPartition partition,
+                 MilvusOffsetContext offsetContext) {
+            this.queue = queue;
+            this.schema = schema;
+            this.source = source;
+            this.partition = partition;
+            this.offsetContext = offsetContext;
+        }
+    }
+
+    private Pipeline createFullPipeline(MilvusConnectorConfig cfg, Set<String> pchannels,
+                                        long startOffset) {
+        Configuration rawCfg = cfg.getConfig();
+
+        ChangeEventQueue<DataChangeEvent> queue = new ChangeEventQueue.Builder<DataChangeEvent>()
+                .pollInterval(Duration.ofMillis(cfg.getPollIntervalMs()))
+                .maxBatchSize(cfg.getMaxBatchSize())
+                .maxQueueSize(cfg.getMaxQueueSize())
+                .maxQueueSizeInBytes(cfg.getMaxQueueSizeInBytes())
+                .loggingContextSupplier(() -> LoggingContext.forConnector(
+                        Module.name(), cfg.getLogicalName(), "streaming"))
+                .build();
+
+        CdcSourceTaskContext<MilvusConnectorConfig> taskCtx = new CdcSourceTaskContext<>(
+                rawCfg, cfg, Collections.emptyMap());
+
+        MilvusDatabaseSchema schema = MilvusDatabaseSchema.create(cfg, taskCtx, metadataClient);
+        TopicNamingStrategy<TableId> naming = cfg.getTopicNamingStrategy(
+                CommonConnectorConfig.TOPIC_NAMING_STRATEGY);
+
+        MilvusEventDispatcher dispatcher = new MilvusEventDispatcher(
+                cfg, naming, schema, queue,
+                cfg.getTableFilters().dataCollectionFilter(),
+                DataChangeEvent::new,
+                new MilvusEventMetadataProvider(),
+                cfg.schemaNameAdjuster(),
+                new DebeziumHeaderProducer(taskCtx));
+
+        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg);
+        KafkaMilvusMessageConsumer consumer = consumerAtOffset(cfg, pchannels, startOffset);
+
+        MilvusStreamingChangeEventSource source = new MilvusStreamingChangeEventSource(
+                cfg, consumer, deserializer(cfg), engine, dispatcher, schema);
+
+        MilvusPartition partition = MilvusPartition.create(TestHelper.TOPIC_PREFIX, PCHANNEL);
+
+        // Seed the offset context so the streaming source resumes from exactly
+        // startOffset instead of falling back to EARLIEST and reading events
+        // produced by earlier tests on the shared pchannel.
+        MilvusOffsetContext offsetContext = new MilvusOffsetContext(new MilvusSourceInfo(cfg));
+        if (startOffset > 0) {
+            offsetContext.setMqPosition(PCHANNEL, cfg.getKafkaPartitionIndex(), startOffset - 1);
+        }
+
+        return new Pipeline(queue, schema, source, partition, offsetContext);
+    }
+
+    private List<DataChangeEvent> pollEvents(ChangeEventQueue<DataChangeEvent> queue,
+                                             int expectedCount,
+                                             Duration timeout)
+            throws InterruptedException {
+        List<DataChangeEvent> all = new ArrayList<>();
+        Awaitility.await("poll dispatched events from queue")
+                .atMost(timeout)
+                .pollDelay(Duration.ofMillis(100))
+                .pollInterval(Duration.ofMillis(200))
+                .until(() -> {
+                    try {
+                        List<DataChangeEvent> batch = queue.poll();
+                        all.addAll(batch);
+                    }
+                    catch (InterruptedException e) {
+                        Thread.currentThread().interrupt();
+                    }
+                    return all.size() >= expectedCount;
+                });
         return all;
     }
 
-    /**
-     * Deserialize raw messages and route them into the ordering engine (buffer DML,
-     * updateWatermark for TimeTick) WITHOUT flushing. The caller flushes.
-     */
-    private void routeOnly(List<RawMilvusMessage> raws, MilvusConnectorConfig cfg,
-                           TimetickOrderingEngine engine)
-            throws MilvusWireFormatMismatchException, MilvusBufferFullException {
-        MilvusProtoDeserializer deser = deserializer(cfg);
-        for (RawMilvusMessage raw : raws) {
-            List<MilvusChangeEvent> events = deser.deserialize(raw);
-            for (MilvusChangeEvent ev : events) {
-                if (ev instanceof MilvusChangeEvent.TimeTick tt) {
-                    String vc = (tt.getVchannel() != null && !tt.getVchannel().isEmpty())
-                            ? tt.getVchannel()
-                            : raw.getTopic();
-                    engine.updateWatermark(vc, tt.getTso());
-                }
-                else {
-                    engine.buffer(ev);
-                }
-            }
-        }
+    private void createSimpleCollection(String name) {
+        CreateCollectionReq.FieldSchema idField = CreateCollectionReq.FieldSchema.builder()
+                .name("id")
+                .dataType(DataType.Int64)
+                .isPrimaryKey(true)
+                .autoID(false)
+                .build();
+        CreateCollectionReq.FieldSchema titleField = CreateCollectionReq.FieldSchema.builder()
+                .name("title")
+                .dataType(DataType.VarChar)
+                .maxLength(256)
+                .build();
+        CreateCollectionReq.FieldSchema vecField = CreateCollectionReq.FieldSchema.builder()
+                .name("vector")
+                .dataType(DataType.FloatVector)
+                .dimension(DIM)
+                .build();
+        CreateCollectionReq.CollectionSchema schema = CreateCollectionReq.CollectionSchema.builder()
+                .fieldSchemaList(Arrays.asList(idField, titleField, vecField))
+                .build();
+        milvusClient.createCollection(CreateCollectionReq.builder()
+                .collectionName(name)
+                .collectionSchema(schema)
+                .build());
     }
 
-    /**
-     * Drain + route + flush for a single pchannel (the common case).
-     */
-    private List<MilvusChangeEvent> consumeDeserializeAndFlush(MilvusConnectorConfig cfg, String pchannel,
-                                                               TimetickOrderingEngine engine)
-            throws Exception {
-        KafkaMilvusMessageConsumer consumer = consumerAtEarliest(cfg, Set.of(pchannel));
-        List<RawMilvusMessage> raws = drainUntilIdle(consumer, Duration.ofSeconds(15));
-        routeOnly(raws, cfg, engine);
-        return engine.flush();
+    private void createAllFieldTypesCollection(String name) {
+        CreateCollectionReq.FieldSchema idField = CreateCollectionReq.FieldSchema.builder()
+                .name("id")
+                .dataType(DataType.Int64)
+                .isPrimaryKey(true)
+                .autoID(false)
+                .build();
+        CreateCollectionReq.FieldSchema countField = CreateCollectionReq.FieldSchema.builder()
+                .name("count")
+                .dataType(DataType.Int32)
+                .build();
+        CreateCollectionReq.FieldSchema titleField = CreateCollectionReq.FieldSchema.builder()
+                .name("title")
+                .dataType(DataType.VarChar)
+                .maxLength(256)
+                .build();
+        CreateCollectionReq.FieldSchema priceField = CreateCollectionReq.FieldSchema.builder()
+                .name("price")
+                .dataType(DataType.Float)
+                .build();
+        CreateCollectionReq.FieldSchema scoreField = CreateCollectionReq.FieldSchema.builder()
+                .name("score")
+                .dataType(DataType.Double)
+                .build();
+        CreateCollectionReq.FieldSchema activeField = CreateCollectionReq.FieldSchema.builder()
+                .name("active")
+                .dataType(DataType.Bool)
+                .build();
+        CreateCollectionReq.FieldSchema metaField = CreateCollectionReq.FieldSchema.builder()
+                .name("meta")
+                .dataType(DataType.JSON)
+                .build();
+        CreateCollectionReq.FieldSchema embeddingField = CreateCollectionReq.FieldSchema.builder()
+                .name("embedding")
+                .dataType(DataType.FloatVector)
+                .dimension(DIM)
+                .build();
+        CreateCollectionReq.CollectionSchema schema = CreateCollectionReq.CollectionSchema.builder()
+                .fieldSchemaList(Arrays.asList(idField, countField, titleField, priceField,
+                        scoreField, activeField, metaField, embeddingField))
+                .build();
+        milvusClient.createCollection(CreateCollectionReq.builder()
+                .collectionName(name)
+                .collectionSchema(schema)
+                .build());
     }
 
-    private ChangeEventSource.ChangeEventSourceContext runningFor(int iterations) {
-        ChangeEventSource.ChangeEventSourceContext ctx = mock(ChangeEventSource.ChangeEventSourceContext.class);
-        Boolean[] values = new Boolean[iterations];
-        Arrays.fill(values, true);
-        when(ctx.isRunning()).thenReturn(true, values).thenReturn(false);
-        return ctx;
+    private JsonObject rowWithIdAndTitle(long id, String title) {
+        JsonObject row = new JsonObject();
+        row.addProperty("id", id);
+        row.addProperty("title", title);
+        List<Float> vec = Arrays.asList(1.0f, 2.0f, 3.0f, 4.0f);
+        row.add("vector", GSON.toJsonTree(vec));
+        return row;
     }
 
-    // -- scenarios -----------------------------------------------------------
-
-    @Test
-    void shouldDeserializeInsertAndAdvanceWatermark() throws Exception {
-        byte[] insertBytes = ProtoMessageFactory.insertSimpleRow("books", 100L, 42L, "hello");
-        byte[] tickBytes = ProtoMessageFactory.timeTick(110L);
-
-        TestHelper.publishProtoMessages(bootstrap, topic, List.of(insertBytes, tickBytes));
-
-        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 2_000L, null);
-
-        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg);
-        MilvusMessageConsumer consumer = TestHelper.kafkaConsumer(cfg);
-        openConsumers.add((KafkaMilvusMessageConsumer) consumer);
-        MilvusStreamingChangeEventSource source = new MilvusStreamingChangeEventSource(
-                cfg, consumer, deserializer(cfg), engine);
-
-        MilvusPartition partition = MilvusPartition.create(TOPIC_PREFIX_LOCAL, topic);
-        MilvusOffsetContext offsetContext = new MilvusOffsetContext(new MilvusSourceInfo(cfg));
-
-        source.execute(runningFor(4), partition, offsetContext);
-
-        assertThat(engine.getGlobalWatermark()).isEqualTo(110L);
-        assertThat(engine.getBufferedEventCount()).isZero();
-        assertThat(offsetContext.getMqOffset(topic)).isNotNull();
-    }
-
-    @Test
-    void shouldDeserializeDeleteEvent() throws Exception {
-        byte[] deleteBytes = ProtoMessageFactory.delete("books", 100L, 7L, 8L);
-        byte[] tickBytes = ProtoMessageFactory.timeTick(110L);
-
-        TestHelper.publishProtoMessages(bootstrap, topic, List.of(deleteBytes, tickBytes));
-
-        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 2_000L, null);
-
-        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg);
-        List<MilvusChangeEvent> flushed = consumeDeserializeAndFlush(cfg, topic, engine);
-
-        assertThat(flushed).hasSize(1);
-        assertThat(flushed.get(0)).isInstanceOf(MilvusChangeEvent.Delete.class);
-        MilvusChangeEvent.Delete del = (MilvusChangeEvent.Delete) flushed.get(0);
-        assertThat(del.getCollectionName()).isEqualTo("books");
-        assertThat(del.getTso()).isEqualTo(100L);
-        assertThat(del.getPrimaryKeys()).isEqualTo(List.of(7L, 8L));
-        assertThat(engine.getGlobalWatermark()).isEqualTo(110L);
-        assertThat(engine.getBufferedEventCount()).isZero();
-    }
-
-    @Test
-    void shouldHandleMultipleVchannels() throws Exception {
-        // Two pchannels → two vchannels routed into one engine.
-        // Watermark = min(timetick_v0, timetick_v1).
-        String topic0 = topic;
-        String topic1 = uniqueTopic();
-        TestHelper.ensureTopic(bootstrap, topic1);
-
-        // pchannel_0: insert@100 + timetick@110 (vchannel=topic0)
-        TestHelper.publishProtoMessages(bootstrap, topic0, List.of(
-                ProtoMessageFactory.insertSimpleRow("coll0", 100L, 1L, "a"),
-                ProtoMessageFactory.timeTick(110L)));
-        // pchannel_1: insert@90 + timetick@120 (vchannel=topic1)
-        TestHelper.publishProtoMessages(bootstrap, topic1, List.of(
-                ProtoMessageFactory.insertSimpleRow("coll1", 90L, 2L, "b"),
-                ProtoMessageFactory.timeTick(120L)));
-
-        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 2_000L, null);
-        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg);
-
-        // Pre-warm the engine with both vchannels at TSO 0 so that inserts
-        // from vchannels whose timetick has not yet arrived are NOT dropped
-        // as "late". The real connector does this from stored offsets.
-        engine.preWarm(Map.of(topic0, 0L, topic1, 0L));
-        assertThat(engine.computeWatermark()).isZero();
-
-        // Drain and route each pchannel separately into the same engine.
-        routeOnly(
-                drainUntilIdle(consumerAtEarliest(cfg, Set.of(topic0)), Duration.ofSeconds(15)),
-                cfg, engine);
-        routeOnly(
-                drainUntilIdle(consumerAtEarliest(cfg, Set.of(topic1)), Duration.ofSeconds(15)),
-                cfg, engine);
-        List<MilvusChangeEvent> flushed = engine.flush();
-
-        // Watermark = min(110, 120) = 110; both inserts (TSO 90, 100) flush in
-        // ascending TSO order.
-        assertThat(engine.getGlobalWatermark()).isEqualTo(110L);
-        assertThat(flushed).hasSize(2);
-        assertThat(flushed.get(0).getTso()).isEqualTo(90L);
-        assertThat(flushed.get(0).getCollectionName()).isEqualTo("coll1");
-        assertThat(flushed.get(1).getTso()).isEqualTo(100L);
-        assertThat(flushed.get(1).getCollectionName()).isEqualTo("coll0");
-        assertThat(engine.getBufferedEventCount()).isZero();
+    private JsonObject allFieldTypesRow() {
+        JsonObject row = new JsonObject();
+        row.addProperty("id", 42L);
+        row.addProperty("count", 7);
+        row.addProperty("title", "hello");
+        row.addProperty("price", 1.5f);
+        row.addProperty("score", 99.9d);
+        row.addProperty("active", true);
+        JsonObject meta = new JsonObject();
+        meta.addProperty("k", 1);
+        row.add("meta", meta);
+        List<Float> vec = Arrays.asList(1.5f, 2.5f, 3.5f, 4.5f);
+        row.add("embedding", GSON.toJsonTree(vec));
+        return row;
     }
 
     @Test
-    void shouldDetectStallAndForceFlush() throws Exception {
-        byte[] insertBytes = ProtoMessageFactory.insertSimpleRow("books", 100L, 42L, "hello");
-        TestHelper.publishProtoMessages(bootstrap, topic, List.of(insertBytes));
+    void shouldCaptureInsert() throws Exception {
+        long startOffset = kafkaEndOffset(bootstrap, PCHANNEL);
+        createSimpleCollection(collectionName);
 
-        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 2_000L, null);
+        milvusClient.insert(InsertReq.builder()
+                .collectionName(collectionName)
+                .data(Collections.singletonList(rowWithIdAndTitle(42L, "hello")))
+                .build());
 
-        // Fake clock for deterministic stall detection.
-        AtomicLong now = new AtomicLong(0L);
-        Clock fake = now::get;
-        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg, fake);
+        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 5_000L, null);
+        Pipeline pipeline = createFullPipeline(cfg, Set.of(PCHANNEL), startOffset);
 
-        KafkaMilvusMessageConsumer consumer = consumerAtEarliest(cfg, Set.of(topic));
-        List<RawMilvusMessage> raws = drainUntilIdle(consumer, Duration.ofSeconds(15));
-        routeOnly(raws, cfg, engine);
+        List<DataChangeEvent> events = runSourceAndPoll(pipeline, 1, Duration.ofSeconds(60));
+        assertThat(events).hasSize(1);
 
-        // No timetick published → watermark=0; flush() returns empty; not stalled
-        // because the fake clock hasn't advanced past the stall timeout.
-        assertThat(engine.getBufferedEventCount()).isEqualTo(1);
-        assertThat(engine.getGlobalWatermark()).isZero();
-        assertThat(engine.isStalled()).isFalse();
-        assertThat(engine.flush()).isEmpty();
+        SourceRecord record = events.get(0).getRecord();
+        assertThat(record).isNotNull();
+        assertThat(record.topic()).startsWith("milvus-test");
 
-        // Advance fake clock past stall timeout (2000 ms).
-        now.addAndGet(2_500L);
-        assertThat(engine.isStalled()).isTrue();
+        Schema keySchema = record.keySchema();
+        assertThat(keySchema).isNotNull();
+        assertThat(keySchema.type()).isEqualTo(Schema.Type.STRUCT);
+        Struct key = (Struct) record.key();
+        assertThat(key).isNotNull();
+        assertThat(key.get("id")).isEqualTo(42L);
 
-        List<MilvusChangeEvent> forceFlushed = engine.forceFlush();
-        assertThat(forceFlushed).hasSize(1);
-        assertThat(forceFlushed.get(0)).isInstanceOf(MilvusChangeEvent.Insert.class);
-        assertThat(((MilvusChangeEvent.Insert) forceFlushed.get(0)).getData())
-                .containsEntry("id", 42L)
-                .containsEntry("title", "hello");
-        assertThat(engine.getBufferedEventCount()).isZero();
-        assertThat(engine.getForceFlushCount()).isEqualTo(1L);
+        Schema valueSchema = record.valueSchema();
+        assertThat(valueSchema).isNotNull();
+        assertThat(valueSchema.type()).isEqualTo(Schema.Type.STRUCT);
+        Struct value = (Struct) record.value();
+        assertThat(value).isNotNull();
+
+        assertThat(value.getString("op")).isEqualTo("c");
+        assertThat(value.get("before")).isNull();
+
+        Struct after = value.getStruct("after");
+        assertThat(after).isNotNull();
+        assertThat(after.get("id")).isEqualTo(42L);
+        assertThat(after.get("title")).isEqualTo("hello");
+
+        Struct source = value.getStruct("source");
+        assertThat(source).isNotNull();
+        assertThat(source.getString("connector")).isEqualTo("milvus");
+        assertThat(source.getString("collection")).isEqualTo(collectionName);
+        assertThat(source.getInt64("tso")).isPositive();
     }
 
     @Test
-    void shouldThrowBufferFullOnOverflow() throws Exception {
-        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 2_000L, 2);
+    void shouldCaptureInsertAndDelete() throws Exception {
+        long startOffset = kafkaEndOffset(bootstrap, PCHANNEL);
+        createSimpleCollection(collectionName);
 
-        byte[] e1 = ProtoMessageFactory.insertSimpleRow("c", 1L, 1L, "a");
-        byte[] e2 = ProtoMessageFactory.insertSimpleRow("c", 2L, 2L, "b");
-        byte[] e3 = ProtoMessageFactory.insertSimpleRow("c", 3L, 3L, "c");
-        TestHelper.publishProtoMessages(bootstrap, topic, List.of(e1, e2, e3));
+        milvusClient.insert(InsertReq.builder()
+                .collectionName(collectionName)
+                .data(Collections.singletonList(rowWithIdAndTitle(42L, "hello")))
+                .build());
 
-        KafkaMilvusMessageConsumer consumer = consumerAtEarliest(cfg, Set.of(topic));
-        List<RawMilvusMessage> raws = drainUntilIdle(consumer, Duration.ofSeconds(15));
-        MilvusProtoDeserializer deser = deserializer(cfg);
-        List<MilvusChangeEvent> events = new ArrayList<>();
-        for (RawMilvusMessage r : raws) {
-            events.addAll(deser.deserialize(r));
-        }
-        assertThat(events).hasSize(3);
+        milvusClient.delete(DeleteReq.builder()
+                .collectionName(collectionName)
+                .ids(Collections.singletonList(42L))
+                .build());
 
-        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg);
-        engine.buffer(events.get(0));
-        engine.buffer(events.get(1));
-        assertThatThrownBy(() -> engine.buffer(events.get(2)))
-                .isInstanceOf(MilvusBufferFullException.class);
+        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 5_000L, null);
+        Pipeline pipeline = createFullPipeline(cfg, Set.of(PCHANNEL), startOffset);
+
+        List<DataChangeEvent> events = runSourceAndPoll(pipeline, 2, Duration.ofSeconds(60));
+        assertThat(events).hasSize(2);
+
+        SourceRecord insertRecord = events.get(0).getRecord();
+        Struct insertValue = (Struct) insertRecord.value();
+        assertThat(insertValue.getString("op")).isEqualTo("c");
+        Struct insertAfter = insertValue.getStruct("after");
+        assertThat(insertAfter.get("id")).isEqualTo(42L);
+        assertThat(insertAfter.get("title")).isEqualTo("hello");
+        Struct insertSource = insertValue.getStruct("source");
+        assertThat(insertSource.getString("collection")).isEqualTo(collectionName);
+        assertThat(insertSource.getInt64("tso")).isPositive();
+
+        SourceRecord deleteRecord = events.get(1).getRecord();
+        Struct deleteValue = (Struct) deleteRecord.value();
+        assertThat(deleteValue.getString("op")).isEqualTo("d");
+        assertThat(deleteValue.get("after")).isNull();
+
+        Struct deleteBefore = deleteValue.getStruct("before");
+        assertThat(deleteBefore).isNotNull();
     }
 
     @Test
-    void shouldDeserializeProtoSingleWireFormat() throws Exception {
-        float[] vector = { 1.5f, 2.5f, 3.5f, 4.5f };
-        byte[] insertBytes = ProtoMessageFactory.insertAllFieldTypes("books", 100L,
-                42L, "hello", vector);
-        byte[] tickBytes = ProtoMessageFactory.timeTick(110L);
+    void shouldCaptureAllFieldTypes() throws Exception {
+        long startOffset = kafkaEndOffset(bootstrap, PCHANNEL);
+        createAllFieldTypesCollection(collectionName);
 
-        TestHelper.publishProtoMessages(bootstrap, topic, List.of(insertBytes, tickBytes));
+        milvusClient.insert(InsertReq.builder()
+                .collectionName(collectionName)
+                .data(Collections.singletonList(allFieldTypesRow()))
+                .build());
 
-        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 2_000L, null);
-        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg);
-        List<MilvusChangeEvent> flushed = consumeDeserializeAndFlush(cfg, topic, engine);
+        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_PROTO_SINGLE, 5_000L, null);
+        Pipeline pipeline = createFullPipeline(cfg, Set.of(PCHANNEL), startOffset);
 
-        assertThat(flushed).hasSize(1);
-        assertThat(flushed.get(0)).isInstanceOf(MilvusChangeEvent.Insert.class);
-        Map<String, Object> data = ((MilvusChangeEvent.Insert) flushed.get(0)).getData();
+        List<DataChangeEvent> events = runSourceAndPoll(pipeline, 1, Duration.ofSeconds(60));
+        assertThat(events).hasSize(1);
 
-        assertThat(data).containsEntry("id", 42L);
-        assertThat(data).containsEntry("count", 7);
-        assertThat(data).containsEntry("title", "hello");
-        assertThat(data).containsEntry("price", 1.5f);
-        assertThat(data).containsEntry("score", 99.9d);
-        assertThat(data).containsEntry("active", true);
-        assertThat(data).containsEntry("meta", "{\"k\":1}");
-        assertThat((float[]) data.get("embedding")).containsExactly(vector);
-    }
+        SourceRecord record = events.get(0).getRecord();
+        Struct value = (Struct) record.value();
+        assertThat(value.getString("op")).isEqualTo("c");
 
-    @Test
-    void shouldDeserializeMsgPackBatchWireFormat() throws Exception {
-        byte[] batch = ProtoMessageFactory.msgpackBatch(topic, topic, "books",
-                100L, 101L, 110L, 42L, 7L);
-        TestHelper.publishProtoMessages(bootstrap, topic, List.of(batch));
+        Struct after = value.getStruct("after");
+        assertThat(after).isNotNull();
 
-        MilvusConnectorConfig cfg = config(MilvusProtoDeserializer.FORMAT_MSGPACK_BATCH, 2_000L, null);
-        TimetickOrderingEngine engine = new TimetickOrderingEngine(cfg);
-        List<MilvusChangeEvent> flushed = consumeDeserializeAndFlush(cfg, topic, engine);
+        assertThat(after.get("id")).isEqualTo(42L);
+        assertThat(after.get("count")).isEqualTo(7);
+        assertThat(after.get("title")).isEqualTo("hello");
+        assertThat(after.get("price")).isEqualTo(1.5f);
+        assertThat(after.get("score")).isEqualTo(99.9d);
+        assertThat(after.get("active")).isEqualTo(true);
+        assertThat(after.get("meta")).isEqualTo("{\"k\":1}");
 
-        assertThat(engine.getGlobalWatermark()).isEqualTo(110L);
-        assertThat(flushed).hasSize(2);
-        assertThat(flushed.get(0)).isInstanceOf(MilvusChangeEvent.Insert.class);
-        assertThat(((MilvusChangeEvent.Insert) flushed.get(0)).getData()).containsEntry("id", 42L);
-        assertThat(flushed.get(1)).isInstanceOf(MilvusChangeEvent.Delete.class);
-        assertThat(((MilvusChangeEvent.Delete) flushed.get(1)).getPrimaryKeys()).isEqualTo(List.of(7L));
-        assertThat(engine.getBufferedEventCount()).isZero();
+        Schema afterSchema = after.schema();
+        assertThat(afterSchema.field("id").schema().type()).isEqualTo(Schema.Type.INT64);
+        assertThat(afterSchema.field("count").schema().type()).isEqualTo(Schema.Type.INT32);
+        assertThat(afterSchema.field("title").schema().type()).isEqualTo(Schema.Type.STRING);
+        assertThat(afterSchema.field("price").schema().type()).isEqualTo(Schema.Type.FLOAT32);
+        assertThat(afterSchema.field("score").schema().type()).isEqualTo(Schema.Type.FLOAT64);
+        assertThat(afterSchema.field("active").schema().type()).isEqualTo(Schema.Type.BOOLEAN);
+
+        assertThat(after.get("embedding")).isInstanceOf(byte[].class);
     }
 }
